--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
   "homepage": "https://github.com/peterhaldbaek/delimiter-stream",
   "devDependencies": {
     "chai": "4.1.2",
-    "mocha": "5.1.1"
+    "mocha": "^7.2.0"
   }
 }
